fixed spelling: MAC address, IP address...

--- a/1sprint/cisco_usage.tex
+++ b/1sprint/cisco_usage.tex
@@ -1,7 +1,7 @@
 \section{Using Cisco}\label{sec:cisco_usage}
 The Cisco localisation and positioning system is already in use at Aalborg University. To be able to use the information from the system, we had a meeting with the MSE administrator, during which he raised concerns for privacy, because of the legality of storing person sensitive data, as mentioned in \cref{sec:permission}. 
 
-Furthermore the MSE administrator wishes to be able to provide the location data to future student projects with ease. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as MAC-addresses and user names. This service is intended to duplicate the functionality of the Cisco MSE RESTful API, such that it acts as a transparent proxy. This is achieved by creating an intermediate RESTful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
+Furthermore the MSE administrator wishes to be able to provide the location data to future student projects with ease. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as MAC addresses and user names. This service is intended to duplicate the functionality of the Cisco MSE RESTful API, such that it acts as a transparent proxy. This is achieved by creating an intermediate RESTful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
 
 \begin{figure}[ht]
 	\begin{center}
@@ -34,9 +34,9 @@ server.createContext("/api/contextaware/v1/location/clients", httpExchange -> {
         });
 \end{lstlisting}
 
-In order to accommodate the privacy concern, we implement some simple methods to obfuscate the MAC-address and user name, one of which can be seen in \cref{lst:obfuscating_mac}. It might be the case that users allow for us to store their personal information, and as such we will have to make a check to see if this has been allowed. To store this information we use a TreeSet, a Java implementation of a Red-black tree, which guarantees $O(log(n))$ worst case time complexity for adding, deleting and searching \cite{aa_book}\cite{treeset}. On line 2 we obtain the MAC-address of the user, which is used in line 3 to perform a search in the TreeSet. If the search returns empty we obfuscate the MAC-address, as seen on line 4. This is done in a similar way for the user name.
+In order to accommodate the privacy concern, we implement some simple methods to obfuscate the MAC address and user name, one of which can be seen in \cref{lst:obfuscating_mac}. It might be the case that users allow for us to store their personal information, and as such we will have to make a check to see if this has been allowed. To store this information we use a TreeSet, a Java implementation of a Red-black tree, which guarantees $O(log(n))$ worst case time complexity for adding, deleting and searching \cite{aa_book}\cite{treeset}. On line 2 we obtain the MAC address of the user, which is used in line 3 to perform a search in the TreeSet. If the search returns empty we obfuscate the MAC address, as seen on line 4. This is done in a similar way for the user name.
 
-\begin{lstlisting}[caption={Obfuscating mac-address},label={lst:obfuscating_mac},language=inc_Java]
+\begin{lstlisting}[caption={Obfuscating MAC address},label={lst:obfuscating_mac},language=inc_Java]
 Private static Client ObfuscateMacAddress(Client singleClient) {
     String oldMacAddress = singleClient.getWirelessClientLocation().getMacAddress();
     if (!watchList.contains(oldMacAddress)) {
