--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -30,7 +30,7 @@ It has been requested by the Heatmap application group to have a unique identifi
 \begin{figure}[ht]
 	\begin{center}
 		\includegraphics[scale=0.9]{graphics/salt.png}
-		\caption{salting and hashing a MAC-Address.}
+		\caption{salting and hashing a MAC Address.}
 		\label{fig:salt}
 	\end{center} 
 \end{figure}
@@ -48,4 +48,4 @@ When communicating with MSE from the intermediate server as well as when communi
 \subsection*{Obfuscating Personal Information}
 In order to ensure our users personal information, we decided to obfuscate the e-mail addresses. By doing so there will be no way for outsiders to identify people unwilling to have their information stored.
 
-IP addresses are not considered personal information. This is based on the fact that the address changes each time you change access point. By not obfuscating the IP, applications will be able to see how many people are connected to a given access point. This can be done by identifying the first 16 bits for IPv4 or the first 48 bits for IPv6, also known as the netbits \cite{IPnetworkID}.
+IP addresses are not considered personal information. This is based on the fact that the address changes each time you change access point. By not obfuscating the IP address, applications will be able to see how many people are connected to a given access point. This can be done by identifying the first 16 bits for IPv4 or the first 48 bits for IPv6, also known as the netbits \cite{IPnetworkID}.
