--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -3,7 +3,7 @@
 This chapter list the aspect of Cisco system and Indoor location based service work, for future semesters.
 
 \begin{itemize}
-	\item Research better ways of obfuscating the MAC-addresses so it is not stored in plain text.
+	\item Research better ways of obfuscating the MAC addresses so it is not stored in plain text.
 	\item Secure the connection between Cisco system and the DB server, so data is not possible to sniff.
 \end{itemize}
 
