--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,5 +1,5 @@
 \chapter{Sprint 4}
-This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and mac-addresses as well as enabling HTTPS on our server. %Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
+This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and MAC addresses as well as enabling HTTPS on our server. %Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
 
 \input{4sprint/our_server}
 \input{4sprint/pers_server}
