fuka you whaaaaaaaaaale

--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -11,7 +11,7 @@ This chapter list the aspect of Cisco system and Indoor location based service w
 \section{Data Flow from Cisco to the Database}\label{sec:data_flow}
 \begin{figure}[ht]
 	\begin{center}
-		\includegraphics[scale=0.7]{graphics/ciscoSmall.pdf}
+		\includegraphics[scale=0.7]{graphics/ciscoNew.pdf}
 		\caption{Cisco systems}
 		\label{fig:cisco_systems}
 	\end{center} 
