--- a/experience/multi_project.tex
+++ b/experience/multi_project.tex
@@ -7,10 +7,23 @@ When working in a multi-project there is a set of nw challenges compared to work
 When working with a large group of people it is necessary to enforce an organisational structure in order to efficiently establish an overview of the project. As described in \cref{subsec:supergroup_meetings} we needed to know how far the different groups were with their separate parts of the project and what kind of problems they were facing. If one group could not make any serious progress because of some hindrance, it was important that the other groups were notified, in case that they were depending on their work. We found the wast majority of these problems, by organising what resembles a Scrum stand up meeting, at the super-group meetings where everyone reported their individual group status'. If a group had a problem they were not themselves able to sort out, they would be able to draw help from the other groups, or move some of their tasks to other groups which would accept them. It should be noted that it was only project wide tasks that could be transferred. Such tasks could be updating the GitLab server or implementing a logging system. \\
 The super-group meetings was accompanied by smaller project wide meetings were a single specific topic would be discussed. One of these meetings were concerned about what kind of license that would be applied to the project.
 
-A set of tools were used in order to ensure that the groups were able to effectively communicate with each other. In addition to the aforementioned meetings, the individual groups would occasionally arrange meetings, as described in \cref{subsec:small_meetings}. These kind of meetings would usually involve two groups with some representatives from both parties. In order to avoid disturbing other groups when planning an meeting, the appointment would be discussed trough the message app Slack. It was necessary to discrete when contacting other groups as multiple groups shared the same group-rooms, and as of such one needs to respects that the other groups could be disturbed. This was also the leading factor for why many of these meetings were outside of the group-rooms.
+A set of tools were used in order to ensure that the groups were able to effectively communicate with each other. In addition to the aforementioned meetings, the individual groups would occasionally arrange meetings, as described in \cref{subsec:small_meetings}. These kind of meetings would usually involve two groups with some representatives from both parties. In order to avoid disturbing other groups when planning an meeting, the appointment would be discussed by using the message web application Slack \cite{slack}. It was necessary to discrete when contacting other groups as multiple groups shared the same group-rooms, and as of such one needs to respects that the other groups could be disturbed. This was also the leading factor for why many of these meetings took place outside of the group-rooms.
+
+\subsubsection*{What There Could Have Been Done better}
+There was still room for improvement, both project wide and group wise, as instances of miscommunication, distrust to others groups work and lack of access to general information were all things % Nogen der kan komme på noget bedre end "things"? \Anders
+ which occurred during the project.
+
+We faced a problem internally in the group which sprung out from how we handled the information we got from the supper-group meetings. We would usually send the same representative who had two major responsibilities: verifying that we had prepared what was asked from us to the next meeting and conveying the key points from the last meeting to the group. It would be better if the representative was chosen anew each time in order to avoid that it was only one from the group who had a good overview of the project. Another solution could be to arrange a short intern meeting in the group after each super-group meeting in order to check that everyone is up to date. It would have been beneficial to solve this issue as the consequence was that we would sometimes forget to have completed certain tasks before their deadlines or went against some of the decisions that had been made. It would be beneficial for the overall project teamwork and the individual group member's sense of involvement in it.
+
+A weekly topic that recurred on super-group meetings was the status update from each group. It was problematic that some groups did not take this presentation seriously and would not mention the problems they were facing our leave out details that might could have been useful for the other groups. It also meant that other groups perceived them as being slow and unresponsive to the requests that were presented with, even if it was them unfit and they actually did what they could in order to keep up. Groups would delay some of their tasks because they thought that the other group would \textit{soon} finish the part that they were depending on, even though that it might could take entire weeks before the part were complete. This was frustrating for those whom depended on the completion of the tasks it meant that they sometimes would need to redesign parts of their solution, or worse, cancel further work as they would not have time to finish. \\
+It would be better if all the groups took the status presentation seriously such that issues could be resolved earlier or entirely avoided. % Skal vi komme ind på hvorofr vi tror at de ikke sagde noget? Skal vi komme ind på hvordan man kan løse det i mere detalje? Jeg har nogle ideer til begge dele. \Anders
+
 
 \subsection{Working Environment}
 % Hvordan sørger mna for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
+When working with multiple teams, it becomes apparent that mutual respect between the groups are important to uphold a healthy working environment.
+
+One method to uphold this environment have already been mentioned, group meetings and the planning of them, but there are other areas of which one can have a positive influence. One such area is
 
 
 \subsection{Overall Opinion}
