--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -1,9 +1,10 @@
 \chapter{Future Work}
 \label{Cha:Future_Work}
-This chapter list the aspect of Cisco system and Indoor location based service work, for future semesters.
+In this chapter we describe what we believe will be advantageously for future students to look into in order to improve and further the system 
+%This chapter list the aspect of Cisco system and Indoor location based service work, for future semesters.
 
 \begin{itemize}
-	\item Research better ways of obfuscating the MAC addresses so it is not stored in plain text.
+	\item Research better ways of obfuscating the MAC addresses so it is not stored in plain text.\ofx{have we not done this sufficient now?}
 	\item Secure the connection between Cisco system and the DB server, so data is not possible to sniff.
 \end{itemize}
 
@@ -21,3 +22,5 @@ This chapter list the aspect of Cisco system and Indoor location based service w
 \input{future_work/our_system} 
 
 \input{future_work/Coordinate_Formates}
+\input{future_work/future_security}
+\input{future_work/integration_test}
