--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -12,13 +12,13 @@ In addition to the super-group meetings there are being held smaller meetings, w
 We have had multiple of these meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
  
 \subsubsection*{Application Meetings}
-At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application group we have had meetings with are making a heatmap, and they require geographical coordinates and confidence factor for each device.
+At meetings with the application group they specified what data they need and we explained how we can provide it. The application group we have had meetings with are making a heat map, and they require geographical coordinates and confidence factor for each device.
 
 \subsubsection*{Database meetings}
-At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative.% We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
+During meetings with the database groups, we talked about what data has to be store and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested that all locations are to be stored as geographical coordinates, rather than relative coordinates.
 
 \subsubsection*{Indoor meetings}
-Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
+We have had several meetings with the other indoor positioning group over the semester. During these meetings we have discussed the possibilities for indoor positioning systems and how we could distribute tasks between the groups. It was during these meetings that we decided to have one group focus on retrieving indoor positioning data, and one group focus on delivering the data to applications. We have had continuous communication between our two groups to keep track of progression and difficulties.
 
 \subsubsection*{UM meetings}
-There was held several meetings with the UM group concerning HTTP and HTTPS and how to incorporate it with our RESTful service. Initially we and the UM group were not able to setup the HTTPS correctly in the estimated time, when the problems was raises over slack aSTEP, a member from the Hotmap application group said he had experience with this and knows how to do it. He were then giving a task to work on how to change the previous code so that aSTEP can run using HTTPS. The next task was to create the keystore to HTTPS, in this we need a third party to ensure that when client connect to our RESTful services it is not a scam or being emulated by a a third party. We initialized to on the task of doing this, but realize the we do not a access to the server, so the task was forwarded to the group in charge of the aSTEP service server. 
+Several meetings were held with the UM group concerning HTTPS and how to incorporate it with our RESTful service. Initially we were not able to set up the HTTPS correctly in the estimated time. When the problems were raised on slack aSTEP, a member from the Hotmap application group said he had experience with this and knew how to do it. We were then tasked to work on changing the previous code to allow aSTEP to communicate using HTTPS. Next, we had to create a certificate for aSTEP, to do this we need a third party to ensure that when client connect to our RESTful services it is not a scam or being emulated by a a third party. We initially took on the task of doing this, but realized that we do not have access to the aSTEP server, so the task was forwarded to the group in charge of the aSTEP service server. 
