looked at some stuff and wrote about MSE error message

--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -2,7 +2,7 @@
 In order to increase the level of security in our system, different considerations should be made. These considerations are made in order to make it more difficult for intruders to break into the system as well as protect sensitive information. We limit the discussion to program communication and the way sensitive information is handled, as this is the most sensitive part of the system. It would also improve the robustness of the system if these parts were made secure, as these are the parts of the program where it is possible to introduce erroneous, dirty data.
 
 \subsection*{Certificates}
-Certificates are used when communicating over the HTTPS protocol as a way to ensure the identity of a website as well as hand out the public key and encryption method. Once a certificate for a website is downloaded to a computer, the identity of the website can be verified against this certificate on subsequent visits. All communication with MSE uses the HTTPS protcol, and as such we have to consider how we treat certificates. 
+Certificates are used when communicating over the HTTPS protocol as a way to ensure the identity of a website as well as hand out the public key and encryption method. Once a certificate for a website is downloaded to a computer, the identity of the website can be verified against this certificate on subsequent visits. All communication with MSE uses the HTTPS protocol, and as such we have to consider how we treat certificates. 
 
 Initially we created an empty certificate-handler which is still in use. This means that the identity of a website is accepted no matter what, potentially allowing for scam websites to copy the certificate and alter it slightly to pose as another website. An alternative, more secure solution, would be to download the certificates MSE uses and insert them in the JVM keystore, which is a collection of all accepted certificates. By freely accepting all certificates it is possible for attackers to input dirty data in the system by adding a server pretending to be an MSE service.
 
