--- a/4sprint/security.tex
+++ b/4sprint/security.tex
@@ -13,5 +13,5 @@ item.setMacAddress(hash);
 
 The applied function can be seen in \cref{lst:ourhash} where in line 1 the MAC address is concatenated with the randomly generated salt-value. In line two the new string is hashed using Guava-19's sha256. In line 4 the MAC address is set to the hashed value. The hashed value is 64 signs long and contain both letters and numbers.
 
-\subsection*{Enable Https on Intermediate Server}
+\subsection*{Enable HTTPS on the Intermediate Server}
 Using "lets encrypt" we can enable https, this was done to the aSTEP server, so we contacted one of the people that ended up doing to final work. He said it took about 3 weeks and the reason why it took so long was because of them not being able to open port and setup a domain which is required for lets encrypt. So we will not be able to do this task duo to our deadline. A section under future work will explain this task to accommodate, because it seen as essential to reach the minimum concerning security
