--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -5,5 +5,6 @@ This is the last sprint and will be dedicated to implementing the last features 
 \input{4sprint/pers_server}
 \input{4sprint/refactor}
 \input{4sprint/security}
+\input{4sprint/catch_up}
 
 \section{Sprint 4 review}
