--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,5 +1,5 @@
 \chapter{Sprint 4}
-This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and MAC addresses as well as enabling HTTPS on our server. %Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
+This is the last sprint and will be dedicated to implementing some final features discovered in sprint 3 and improving the overall code quality. This includes implementing some of the functionality discussed in \cref{sec:secure} as well as preparing the code for handing over to the new developers. Additionally, a section will be prepared for future developers to ease the transition and make it easier to get up to speed.
 
 \input{4sprint/our_server}
 \input{4sprint/pers_server}
@@ -8,3 +8,8 @@ This is the last sprint and will be dedicated to implementing the last features 
 \input{4sprint/catch_up}
 
 \section{Sprint 4 review}
+To perform an evaluation of the sprint we iterate over the sprint goals and comment on whether or not they were fulfilled.
+
+We set out to update both the intermediate server and the client server following the security considerations made in \cref{sec:secure}. These updates successfully implemented several features as well as refactored code to streamline the code style.
+
+Finally, we planned on preparing a section dedicated to easen the transitioning for future developers. This section contains information on how to perform different tasks and solve problems that are essential for the project.
