--- a/4sprint/pers_server.tex
+++ b/4sprint/pers_server.tex
@@ -5,7 +5,7 @@ The intermediate server utilizes Log4j \cite{log4j} to log error messages when i
 
 
 \subsubsection*{Password}
-Changing the password from being static to being dynamic was done using the programs parameters, so previouesly we had 3 parameter, ip, cisco user and cisco password. we add an additionally two parameter, MSE user and MSE password.
+Changing the password from being static to being dynamic was done using the programs parameters, so previouesly we had 3 parameter, IP, Cisco user and Cisco password. we add an additionally two parameter, MSE user and MSE password.
 
 \begin{lstlisting}[caption={Failed Connection snapshot},label={lst:dynamic_password},language=inc_Java, mathescape]
 public class RestfulMSE {
@@ -24,5 +24,4 @@ public class RestfulMSE {
 }
 \end{lstlisting}
 
-In \cref{lst:dynamic_password} the new changes are showed to 
-The new parameter are stored in line 7 and 8. 
+In \cref{lst:dynamic_password} the new changes are shown. the new parameter are stored in line 7 and 8, These are use as parameters for GeneratePassphrase, which is used to ensure that the user has the correct username and password when they try to login.
