--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -1,4 +1,4 @@
-\section{Catching up - Introduction to using our systems}
+\section{Catching up - Introduction to using our systems}\label{sec:catchup}
 This section will contain guides describing what elements to be aware of in the system and how to perform different tasks for maintenance and further development. We write this section to ease the change of ownership, such that the new owners can avoid problems we experienced and spent time resolving. 
 
 \subsection*{Transfering a program to the virtual server}
