--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -12,4 +12,4 @@ To perform an evaluation of the sprint we iterate over the sprint goals and comm
 
 We set out to update both the intermediate server and the client server following the security considerations made in \cref{sec:secure}. These updates successfully implemented several features as well as refactored code to streamline the code style.
 
-Finally, we planned on preparing a section dedicated to easen the transitioning for future developers. This section contains information on how to perform different tasks and solve problems that are essential for the project.
+Finally, we planned on preparing a section dedicated to ease the transitioning for future developers. \Cref{sec:catchup} contains information on how to perform different tasks and solve problems that are essential for the project.
