multi_project er nu klar til gennemretning

--- a/experience/multi_project.tex
+++ b/experience/multi_project.tex
@@ -1,6 +1,5 @@
 \section{Working in a Multi-Project}
-When working in a multi-project there is a set of nw challenges compared to working in the traditional format which we are used too.
-%TODO der skal nook være lidt mere intro her
+When working in a multi-project there is a set of new challenges compared to working in the traditional format which we are used too. In order to cope with the new setting our, and other, groups had to change behaviour in regards to other groups and the use of group-rooms. Amongst others.
 
 \subsection{Organisation}
 % Hordan er tingene blevet organiseret? De forskellige former for møder, slack, issues[gitlab], repoes 
@@ -16,15 +15,59 @@ There was still room for improvement, both project wide and group wise, as insta
 We faced a problem internally in the group which sprung out from how we handled the information we got from the supper-group meetings. We would usually send the same representative who had two major responsibilities: verifying that we had prepared what was asked from us to the next meeting and conveying the key points from the last meeting to the group. It would be better if the representative was chosen anew each time in order to avoid that it was only one from the group who had a good overview of the project. Another solution could be to arrange a short intern meeting in the group after each super-group meeting in order to check that everyone is up to date. It would have been beneficial to solve this issue as the consequence was that we would sometimes forget to have completed certain tasks before their deadlines or went against some of the decisions that had been made. It would be beneficial for the overall project teamwork and the individual group member's sense of involvement in it.
 
 A weekly topic that recurred on super-group meetings was the status update from each group. It was problematic that some groups did not take this presentation seriously and would not mention the problems they were facing our leave out details that might could have been useful for the other groups. It also meant that other groups perceived them as being slow and unresponsive to the requests that were presented with, even if it was them unfit and they actually did what they could in order to keep up. Groups would delay some of their tasks because they thought that the other group would \textit{soon} finish the part that they were depending on, even though that it might could take entire weeks before the part were complete. This was frustrating for those whom depended on the completion of the tasks it meant that they sometimes would need to redesign parts of their solution, or worse, cancel further work as they would not have time to finish. \\
-It would be better if all the groups took the status presentation seriously such that issues could be resolved earlier or entirely avoided. % Skal vi komme ind på hvorofr vi tror at de ikke sagde noget? Skal vi komme ind på hvordan man kan løse det i mere detalje? Jeg har nogle ideer til begge dele. \Anders
-
+It would be better if all the groups took the status presentation seriously such that issues could be resolved earlier or entirely avoided. % Skal vi komme ind på hvorfor vi tror at de ikke sagde noget? Skal vi komme ind på hvordan man kan løse det i mere detalje? Jeg har nogle ideer til begge dele. \Anders
 
 \subsection{Working Environment}
-% Hvordan sørger mna for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
+% Hvordan sørger man for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
 When working with multiple teams, it becomes apparent that mutual respect between the groups are important to uphold a healthy working environment.
 
-One method to uphold this environment have already been mentioned, group meetings and the planning of them, but there are other areas of which one can have a positive influence. One such area is
+One method to uphold this environment have already been mentioned, being discrete and non-disturbing when planning and attending private group meetings, but there are other areas of which one can have a positive influence. 
 
+In addition to planning meetings, Slack was also used as the main communication outlet between the groups and multiple channels, or rooms, was created with different topics such as "Indoor", "DataBase", "Meeting", "Gitlab Administration Support" etc. It was accepted at a super-group meeting that everyone is required to be available at Slack in the work hours trough Mon- to Friday. This allowed groups, who preferred not to use crowded group-rooms, to work from other locations and still be reachable. Additionally, it was warranted that the student mail address list should not be used, such that the primary communication only took place in one forum.  
+
+In order to keep the group-rooms quiet, it was discouraged to arrange supervisor-meetings in the group-rooms. This meant that the groups would often move the meeting to their supervisors office or lend a room at campus. This was another attempt to make the group-rooms pleasant to work in.
+
+Experience from the last semester, the fifth, encouraged us to make rules for how to access and use the shared refrigerator. We had a problem with spoiled food as people would leave their lunch and forget about it. Another issue lied in people walking in and out of the group room that hosted %Havde? \Anders
+the fridge, which was disturbing. Because of these reasons, an agreement on visiting hours and when it was allowed to throw away leftover food was established. This meant that groups who resides in the same room where the fridge was located, should have a better experience than those from the last semester.
 
 \subsection{Overall Opinion}
 % Konklussion? 
+A set of solutions was taken in use to combat the new challenges that we were faced with this semester in order to uphold a healthy working environment and to ensure that a large group could work together in togetherness. % #Simon
+
+We access that the overall cooperation between the groups have been satisfactory as the issues which presented themselves were resolved with a common compliance. Even though that improvements could be made to process, the problems were not to major too inflict notable damage to the project. This is due to the overall effort from all the groups to make the best of this project.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
