--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -7,7 +7,7 @@ This is the last sprint and will be dedicated to implementing some final feature
 \input{4sprint/security}
 \input{4sprint/catch_up}
 
-\section{Sprint 4 review}
+\section{Sprint Evaluation}
 To perform an evaluation of the sprint we iterate over the sprint goals and comment on whether or not they were fulfilled.
 
 We set out to update both the intermediate server and the client server following the security considerations made in \cref{sec:secure}. These updates successfully implemented several features as well as refactored code to streamline the code style.
