Started on experience building our own system

--- a/experience/our_system.tex
+++ b/experience/our_system.tex
@@ -1,1 +1,4 @@
 \section{Our System}\ofx{What have we done without success Jacob?}
+
+What programs have we made and what worked and what did not work, furthermore what would have been the next step in order to get the programs functioning as they were intended too.
+
