fixed up chap 4

--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,10 +1,9 @@
 \chapter{Sprint 4}
 This is the last sprint and will be dedicated to implementing some final features discovered in sprint 3 and improving the overall code quality. This includes implementing some of the functionality discussed in \cref{sec:secure} as well as preparing the code for handing over to the new developers. Additionally, a section will be prepared for future developers to ease the transition and make it easier to get up to speed.
 
-\input{4sprint/our_server}
-\input{4sprint/pers_server}
+\input{4sprint/client_server_update}
+\input{4sprint/intermediate_server_update}
 \input{4sprint/refactor}
-\input{4sprint/security}
 \input{4sprint/catch_up}
 
 \section{Sprint Evaluation}
