--- a/bib.bib
+++ b/bib.bib
@@ -431,3 +431,9 @@
 	note = {Accessed 18-5-2016},
 	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.pdf}
 }
+@MISC{SnifferCode,
+	author = {Silver Moon},
+	title = {Packet Sniffer Code in C using sockets},
+	note = {Accessed 20-5-2016},
+	url ={http://www.binarytides.com/packet-sniffer-code-c-linux/}
+}
