summary in the start of the rapport

--- a/rapport.tex
+++ b/rapport.tex
@@ -9,7 +9,7 @@
 \include{formalia/forord}
 \cleardoublepage
 
-
+\include{formalia/resume}
 
 \phantomsection													% Kunstigt afsnit, som hyperlinks kan 'holde fast i'
 \pdfbookmark[0]{Table of Contents}{Contents}					% Tildeler en klikbar bookmark til den endelige PDF
