Finished our system, needed to be reviewed.

--- a/rapport.tex
+++ b/rapport.tex
@@ -40,6 +40,7 @@
 
 %%%% Appendiks %%%%
 \appendix														% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
+\include{appendix/data_dump}
 \phantomsection													% Kunstigt afsnit, som hyperlinks kan 'holde fast i'
 \pdfbookmark[0]{Appendiks}{appendiks}							% Tildeler en klikbar bookmark til den endelige PDF
 
