--- a/future_work/future_security.tex
+++ b/future_work/future_security.tex
@@ -3,3 +3,5 @@ More features could be implemented to further security in our system, as discuss
 
 \subsection{HTTPS on Intermediate Server}
 We believe the most significant improvement future students can make to further security in this system would be to implement HTTPS on the intermediate server.
+\subsection*{Enable HTTPS on the Intermediate Server}
+Using "lets encrypt" we can enable HTTPS, this was done to the aSTEP server, so we contacted one of the people that ended up doing to final work. He said it took about 3 weeks and the reason why it took so long was because of them not being able to open port and setup a domain which is required for lets encrypt. So we will not be able to do this task duo to our deadline. A section under future work will explain this task to accommodate, because it seen as essential to reach the minimum concerning security.
