resume was gone

--- a/4sprint/client_server_update.tex
+++ b/4sprint/client_server_update.tex
@@ -1,6 +1,5 @@
-\section{Client Server}
+\section{Client Server Update}
 
-\subsection*{Enabling HTTPS}
 
 \subsection*{MSE Error Handling}\ofx{maybe give another title}
 It may occur that MSE is not running if this is the case it should be communicated to the user. As of now, it is possible to visit a restful service communicating if MSE is running or not. This however may seem insufficient for a user, especially if the user is receiving continuous data. Therefore the client should be able to communicate if it is not getting any data from the intermediate server. By doing so the user would get a message as soon as MSE stops working.
