Jacob needs to look at the following items: finist catch up with how to open the program, desrcibe https and certificates in future work.

--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -1,7 +1,7 @@
-\section{Catching up - Introduction to using our systems}\label{sec:catchup}
+\section{Catching Up - Introduction to Using Our Project}\label{sec:catchup}
 This section will contain guides describing what elements to be aware of in the system and how to perform different tasks for maintenance and further development. We write this section to ease the change of ownership, such that the new owners can avoid problems we experienced and spent time resolving. 
 
-\subsection*{Transfering a program to the virtual server}
+\subsection*{Transfering a Program to the Virtual Server}
 We recommend testing new changes as thoroughly as possible before going through this as this process is tiresome to do a lot. Before doing this you need to contact the Cisco MSE administrator of AAU and ask for passwords for the virtual proxy server and MSE. The current administrator is Per Mejdal Rasmussen from ITS. Let him know that you are continuing development of the proxy server connecting us to MSE.
 
 Sending the Java program to the virtual intermediate server:
@@ -29,13 +29,15 @@ Sending the Java program to the virtual intermediate server:
 When further developing the project it is useful to share the debug configurations, such that the project setup only has to be done on one computer. In IntelliJ, open the Edit Configurations screen and tick the shared box. This creates a folder in the .idea project folder called runConfigurations, which can be shared. When opening the project, IntelliJ will automatically detect existing debug configurations in this folder.
 
 \subsection*{Projects under Indoor Repository}
-The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projects are called: testingPrograms, RESTSW6, indoorLibrary, indoorCore.
+The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projects are called: testingPrograms, RestfulMSE, indoorLibrary, indoorCore. Additionally you will be able to find a JavaDocs folder containing code documentation.
 
 \begin{itemize}
 \item Testingprograms is a simple project used to debug a RESTful service. This can equally be done with a tool in IntelliJ (under Tools -> Test RESTful Web Service), however, we do not advice this as everything has to be input each time it is to be tested. Testingprograms contains very little functionality and is only meant to be used for HTTP get calls.
-\item RESTSW6 is the project for the intermediate proxy server. 
+\item RestfulMSE is the project for the intermediate proxy server. 
 \item Indoorlibrary is a static library containing much of the functionality used by our programs. We early on realised that the two systems are alike in many ways, and would have to afford the same functionality. As a consequence we decided to make a library to use across several projects, to avoid duplicate code. 
 \item IndoorCore contains the code for the client service. 
 \end{itemize} 
 
-\sfx{useful links to wiki and all that}
+\subsection*{First Time Opening the Program}
+This is a step guide to setup the IntelliJ IDE with the project.
+
