--- a/formalia/synopsis.tex
+++ b/formalia/synopsis.tex
@@ -1,1 +1,6 @@
-Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
+%Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
+
+
+In this multi-project our group is concerned with indoor positioning. Our main task is to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. To do so we have chosen to utilize Cisco, which is available to us at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via curtain calculations on the Received Signal Strength Indication (RSSI).
+
+We set up and intermediate server at the Cisco Administrators network in order to retrieve and process data from Cisco. We send the data to a client at the aSTEP server from which the data is sent to the aSTEP database.
