--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -40,4 +40,9 @@ The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projec
 
 \subsection*{First Time Opening the Program}
 This is a step guide to setup the IntelliJ IDE with the project.
-
+\begin{itemize}
+\item Files -> Open, and select on of the projects in the indoor repository.
+\item If Non-managed pom.xml file found appears, select Add as Maven Project.
+\item If Project SDK is not definded apperars, select Setup SDK and choose java version 1.8.
+\item If the Alogger or Module class is missing, add astep to the library.
+\end{itemize}
