Udkast til en konklussion

--- a/rapport.tex
+++ b/rapport.tex
@@ -37,6 +37,9 @@
 %%%% FUTURE WORK %%%%
 \include{future_work/future_work}
 
+%%% CONCLUSION %%%
+\include{formalia/conclusion}
+
 
 %%%% Appendiks %%%%
 \appendix														% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
