--- a/formalia/resume.tex
+++ b/formalia/resume.tex
@@ -1,5 +1,5 @@
 \chapter*{Summary}
-In this multi-project our group have been concerned with indoor positioning. Our main task have been to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. To do so we chose to utilize Cisco, which is available to us at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via curtain calculations on the Received Signal Strength Indication (RSSI).
+In this multi-project our group have been concerned with indoor positioning. Our main task have been to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. To do so we chose to utilize Cisco, which is available to us at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via curtain\afx{Du lavede lige en Anders ("gardin" vs "visse")} calculations on the Received Signal Strength Indication (RSSI).
 
 From Cisco we are able to extract the geographical location of all devices within the perimeter of the system, even if the device is not connected to the network. However, since Cisco grants us access to personal information of all the devices such as the MAC address and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we put up an intermediate server form which we could obfuscate personal information and had access to retrieve the data from. By doing so not even we are able to access the sensitive information. 
 
