--- a/4sprint/client_server_update.tex
+++ b/4sprint/client_server_update.tex
@@ -1,20 +1,17 @@
 \section{Client Server Update}
-
-
-\subsection*{MSE Error Handling}\ofx{maybe give another title}
-It may occur that MSE is not running if this is the case it should be communicated to the user. As of now, it is possible to visit a restful service communicating if MSE is running or not. This however may seem insufficient for a user, especially if the user is receiving continuous data. Therefore the client should be able to communicate if it is not getting any data from the intermediate server. By doing so the user would get a message as soon as MSE stops working.
-
+A small update has been implemented for the client server with the goal of supporting multi-server communication and paging.
 
 \subsection*{Paging}
+We previously implemented an update on the intermediate server to support paging, as described in \cref{sec:proxy_update1}. With this update in place, it is possible to select page number and page size when retrieving data. We wish to automate this process with the client server, and this update integrates code to retrieve data several times to obtain all pages. It is done by sequentially requesting data while incrementing the page number until a request returns empty because of a non-existing page. When the program reaches such a state, it assumes that it has retrieved all available data.
 
 \subsection*{Adding servers to client}
-\Cref{subsec:system_hierarchy} and \cref{sec:data_flow} describes the server/client hierarchy between the MSE servers and the client which processes the data. 
-\begin{lstlisting}[caption={Starting multiple threads to pull data from multiple MSE servers}, label={lst:cisco_puller}, language=inc_Java]
+\Cref{subsec:system_hierarchy} and \cref{sec:data_flow} describes the hierarchy and data flow between the MSE servers and the client which processes the data. 
+\begin{lstlisting}[caption={Starting threads to pull data from multiple MSE servers}, label={lst:cisco_puller}, language=inc_Java]
 for (CiscoPuller thread : threadList) {
-thread.start();
-System.out.println("ciscoPuller started on ip: " + thread.get_ip());
+    thread.start();
+    System.out.println("ciscoPuller started on ip: " + thread.get_ip());
 }
 \end{lstlisting}
 \Cref{lst:cisco_puller} showcases the code that is responsible for starting the threads that pulls data from several different MSE services. Each thread in the \textit{threadList} collection is configured to connect to an MSE service with an address, username and password. A thread will start to pull data as soon as it is started and will only stop if terminated or otherwise interrupted.
 
-The design reflects that we want to connect to multiple MSEs in addition to the intermediate server that we are currently using. There are no other connections between the client and other services besides the intermediate server, as of yet.
+The design reflects that we wish to connect to multiple MSEs in addition to the intermediate server that we are currently using. As of now we there are no other connections between the client and other services.
