--- a/formalia/synopsis.tex
+++ b/formalia/synopsis.tex
@@ -1,6 +1,6 @@
 %Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
 
-Indoor positioning is one of the technologies in which there is predicted to happen a great development in the coming years. In the aSTEP multi-project, our group is concerned with indoor positioning. To do so we have chosen to utilize Cisco, which is available to us at AAU. From Cisco we are able to extract the location and other information about all Wi-Fi devices at AAU.
+Indoor positioning is one of the technologies in which there is predicted to happen a great development in the coming years. In the aSTEP multi-project, our group is concerned with indoor positioning. We have chosen to utilize Cisco, which is available to us at AAU. From Cisco we are able to extract the location and other information about all Wi-Fi devices at AAU.
 
 Our job is to provide the applications dependent on indoor positioning with the coordinates of all devices in the area. For doing this we have set up an intermediate server, at the Cisco Administrators network, which extract data from Cisco, processes it and sends it to a client on the aSTEP server from which it is send to the database. As we have access to sensitive data such as MAC addresses security is a large concern, for which we will explore possibilities in order to further it as much as possible.
 
